<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/laptop"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_marginBottom="35dp"
        android:layout_width="110dp"
        android:layout_height="91dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="8dp"
        android:src="@drawable/logo"/>

    <EditText
        android:id="@+id/editText"
        android:layout_width="292dp"
        android:layout_height="47dp"
        android:padding="10dp"
        android:ems="10"
        android:hint="@string/ema_il"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/rounded_corner"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="292dp"
        android:layout_height="47dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/rounded_corner"
        android:hint="@string/pwd"
        android:padding="10dp"
        android:textColor="@color/colorPrimary" />

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
        android:layout_marginTop="25dp"
        android:orientation="horizontal">
    <Button
        android:id="@+id/button3"
        android:layout_width="158dp"
        android:layout_height="52dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="#019031"
        android:text="@string/login"
        android:textColor="@android:color/white"
        />

    <Button
        android:id="@+id/register"
        android:layout_width="157dp"
        android:layout_height="55dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="#019031"
        android:text="@string/register"
        android:textColor="@android:color/white"
        />

</LinearLayout>
</LinearLayout>